--- a/doc/full_manual/full_manual.tex
+++ b/doc/full_manual/full_manual.tex
@@ -114,6 +114,8 @@ Jhonatan de Souza Oliveira
 \usepackage[utf8]{inputenc}		% defines file's character encoding
 \usepackage[english]{babel} % babel system, adjust the language of the content
 \usepackage{marginnote} %margin note
+\usepackage{paralist} %inline list
+\usepackage{hyperref}
 \usepackage[					% clean thesis style
 	figuresep=colon,%
 	sansserif=false,%
