--- a/doc/full_manual/references.bib
+++ b/doc/full_manual/references.bib
@@ -7,6 +7,44 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+@inproceedings{hagberg-2008-exploring,
+author = {Aric A. Hagberg and Daniel A. Schult and Pieter J. Swart},
+title = {Exploring network structure, dynamics, and function using {NetworkX}},
+year = {2008},
+month = Aug,
+urlpdf = {http://math.lanl.gov/~hagberg/Papers/hagberg-2008-exploring.pdf},
+booktitle = {Proceedings of the 7th Python in Science Conference (SciPy2008)},
+editors = {G\"{a}el Varoquaux, Travis Vaught, and Jarrod Millman},
+address = {Pasadena, CA USA},
+pages = {11--15}
+}
+
+@article{van2011numpy,
+  title={The NumPy array: a structure for efficient numerical computation},
+  author={Van Der Walt, Stefan and Colbert, S Chris and Varoquaux, Gael},
+  journal={Computing in Science \& Engineering},
+  volume={13},
+  number={2},
+  pages={22--30},
+  year={2011},
+  publisher={AIP Publishing}
+}
+
+@Article{Hunter:2007,
+  Author    = {Hunter, J. D.},
+  Title     = {Matplotlib: A 2D graphics environment},
+  Journal   = {Computing In Science \& Engineering},
+  Volume    = {9},
+  Number    = {3},
+  Pages     = {90--95},
+  abstract  = {Matplotlib is a 2D graphics package used for Python
+  for application development, interactive scripting, and
+  publication-quality image generation across user
+  interfaces and operating systems.},
+  publisher = {IEEE COMPUTER SOC},
+  year      = 2007
+}
+
 @Article{PER-GRA:2007,
   Author    = {P\'erez, Fernando and Granger, Brian E.},
   Title     = {{IP}ython: a System for Interactive Scientific Computing},
