--- a/doc/full_manual/section/abstract.tex
+++ b/doc/full_manual/section/abstract.tex
@@ -8,6 +8,6 @@
 We propose a programming library for Darwinian networks (DNs).
 The library covers adaptation and evolution in DNs, for modeling a problem domain and inference on the model, respectively.
 The implementation uses Python, expanding over a simple constructed BN library called Darwin.
-Furthermore, in order to facilitate the interactive with the Darwinian Network Library, a tutorial on IPython Notebook is introduced.
+Furthermore, in order to facilitate the understanding on the Darwinian Network Library, a environment to draw DNs is provided.
 Its benefits includes interactive visual tools to compute and draw DNs ``on the fly.''
 Finally, we explore the unit test, a test automation which supports the soundness of Darwinian Network library.
