--- a/doc/full_manual/section/chapter-introduction.tex
+++ b/doc/full_manual/section/chapter-introduction.tex
@@ -42,7 +42,7 @@ As a base for DN library, we develop a reliable framework for probabilistic grap
 Besides of the reliable implementation of Darwin Library, another advantage of using this framework is to provide a platform for fair comparison between BNs and DNs, since both are in the same programming language and the same set of basic implementation.
 One salient feature of Darwin library it is test unity for all its operation classes.
 A test unity is a software testing method which uses individual units of source code that are tested to determine whether they are fit for use \cite{kolawa2007automated}.
-The DN library will also use \emph{IPython Notebook} \cite{PER-GRA:2007} in order to provide a Python programming interface for the users.
+The DN library will also use \emph{matplotlib} \cite{Hunter:2007} in order to provide a environment to draw DNs.
 
 %to finish
 In summary, this project proposes the implementation of a DN library.
