--- a/doc/full_manual/section/chapter-conclusion.tex
+++ b/doc/full_manual/section/chapter-conclusion.tex
@@ -9,9 +9,9 @@ The main advantage of the DN library is to apply novel ideas and techniques of D
 DN library also is great for teaching as well for quick prototyping or testing.
 
 
-DN library is based upon the novel library Darwin, a written in Python for BN modelling and inference.
+DN library is based upon the novel library Darwin, a written in Python for BN modeling and inference.
 Darwin library has two main categories called potentials and graph manipulations.
-The former is a data structure for modelling a probability table.
+The former is a data structure for modeling a probability table.
 The latter maps nodes in the graph to a list of potentials.
 
 
