--- a/doc/full_manual/section/chapter-darwin.tex
+++ b/doc/full_manual/section/chapter-darwin.tex
@@ -1,11 +1,11 @@
 \chapter{Darwin Library}
 \label{sec:darwin_lib}
 
-Darwin is a simple library written in Python for BN modelling and inference.
+Darwin is a simple library written in Python for BN modeling and inference.
 The main purpose of the library is teaching and quick prototyping or testing.
 In order to achieve these goals, the library has a simplistic approach of implementation, using native Python data structure and light usage of object oriented programming.
 The structure of Darwin is basically divided into two categories: potentials and graph manipulations.
-The features are also split into two main categories: tools for inference and modelling.
+The features are also split into two main categories: tools for inference and modeling.
 Furthermore, in this section we also present a guide for getting started using Darwin.
 
 \section{Structure}
@@ -16,18 +16,18 @@ These two categories form individually or together the tree structure of the lib
 
 \begin{figure}[hbt]
     \begin{center}
-        \includegraphics[width=0.6\textwidth]{img/logo_uofr_black}
+        \includegraphics[width=\textwidth]{img/structure_darwin}
     \end{center}
     \caption{Three structure of Darwin.}
     \label{fig:tree_darwin}
 \end{figure}
 
-At the root, the class \emph{Potential} is a data structure for modelling a probability table.
+At the root, the class \emph{Potential} is a data structure for modeling a probability table.
 The \emph{NetworkX} \cite{hagberg-2008-exploring} is set of data structures for graph manipulation and is also included at the root of the library.
 Similarly, \emph{GraphWithPotential} is a class which basically maps nodes in a graph with a set of potentials, besides providing manipulations on the graph and the potentials on it.
 \emph{BayesianNetwork} is a class that inherits from \emph{GraphWithPotential} but maps only one potential per node.
-This data structure is used for a BN modelling.
-In the same way, the class \emph{MarkovNetwork} entirely inherits the behaviour and properties of \emph{GraphWithPotential}, therefore it can be used for MN modelling.
+This data structure is used for a BN modeling.
+In the same way, the class \emph{MarkovNetwork} entirely inherits the behaviour and properties of \emph{GraphWithPotential}, therefore it can be used for MN modeling.
 
 The \emph{Utils} branch is formed by a set of standalone functions which implement core procedures for the other classes.
 Mainly, these functions are defined by numerical operations and can be optimized separately.
@@ -38,7 +38,7 @@ In MnUtils, we have utilities for MN propagation such as finding a optimal path 
 Lastly, PotentialUtils is formed by a set of procedures for numerical operations such as multiplication, division and marginalization of tables.
 All potential manipulations in PotentialUtils is implemented according to the efficient implementation proposed in \cite{koll09}.
 
-In the \emph{Modelling} brach, there is an implementation of d-Separation as proposed in Algorithm 3.1 of \cite{koll09}.
+In the \emph{Modeling} brach, there is an implementation of d-Separation as proposed in Algorithm 3.1 of \cite{koll09}.
 While in the branch \emph{Inference} there are few data structures useful for exact inference in BNs.
 The \emph{Barren} function is used for identifying barren potentials in factorizations.
 \emph{SumOut} is a function which systematically remove a set of variables from a factorization.
@@ -54,7 +54,7 @@ The library is not intended for fast inference, neither high accuracy.
 Therefore, all numerical operations are implemented using native Python code, instead of high performance libraries such as \emph{numpy} \cite{van2011numpy}.
 The graph manipulations are done by an external library called \emph{NetworkX}, a robust and well known library with high performance and large set of tools.
 
-For modelling, Darwin has the testing of d-Separation implemented using a reachability algorithm.
+For modeling, Darwin has the testing of d-Separation implemented using a reachability algorithm.
 Also, the library has built in tools for converting a BN into a MN, including the join tree construction by moralization, triangulization and the assignment of potentials.
 The triangulization step, specifically, has implemented 4 different heuristics, the same as implemented in \emph{PgmPy}.
 
@@ -88,8 +88,8 @@ For example, the following code creates a graph with two nodes $\{a\}$ and $\{a,
     GwP.add_potential("ab", p2)
 \end{verbatim}
 
-The MarkovNetwork inherits from GraphWithPotential, therefore modelling a MN is simply using the GraphWithPotential like in the code above.
-In the same way, modelling a BN uses the BayesianNetwork class which also inherits from GraphWithPotential.
+The MarkovNetwork inherits from GraphWithPotential, therefore modeling a MN is simply using the GraphWithPotential like in the code above.
+In the same way, modeling a BN uses the BayesianNetwork class which also inherits from GraphWithPotential.
 The difference for a BN is that only one potential is assigned at one node and the graph used is a DAG.
 For instance, the code above can be used to declare a BN with two nodes $a \rightarrow ab$ just by changing the definition of $G$ to the below code, which is a directed graph.
 \begin{verbatim}
