--- a/doc/full_manual/section/chapter-introduction.tex
+++ b/doc/full_manual/section/chapter-introduction.tex
@@ -8,7 +8,7 @@
 Darwinian networks (DNs) \cite{butzOliveiraSantosCai15} were proposed as a simplification of working with Bayesian networks (BNs).
 A BN is a set of \emph{conditional probability tables} (CPTs) and a \emph{direct acyclic graph} (DAG) \cite{pear88}.
 The DAG is used to represent graphically the relations between vertices and each vertex is associate with a CPT that quantifies those reslations.
-On the other hand, a DN directly draws the CPTs as a dashed circle called population.
+On the other hand, a DN directly draws the CPTs with a closed circle called population.
 A population has white and black nodes, called combative and docile traits, respectively.
 Combative traits are used to represent variables on the LHS of a CPT and docile traits represent the variables of the RHS of a CPT.
 Therefore, a DN is defined as a multi-set of populations.
@@ -20,7 +20,7 @@ DNs graphically represents multiplications and divisions with the merge of popul
 DNs perform both modeling and inference in the same platform.
 
 A programming library is essential to run experimental results, develop real world systems, incentive the literature in the area, among other applications.
-In this project, we propose the implementation of a DN library, which contains the basic tools for modeling, testing adaptation and performing evolution in DNs.
+In this project, we propose the implementation of a DN library, which contains the basic tools for testing adaptation and performing evolution in DNs.
 A user of the library can work with DNs following general ideas from published papers in DNs \cite{butzOliveiraSantosCai15} and discover new practical understanding of BNs, all applied with simple procedures that act with the same remarkable robust view of DNs.
 
 For modeling DNs, the library makes available procedures for all steps of adaptation, first defining populations with combative and docile traits.
@@ -40,14 +40,13 @@ Then, natural selection can be called eventually in order to remove unnecessary 
 The implementation of the DN library utilizes Python programming language, known for its code readability and simple syntax.
 As a base for DN library, we develop a reliable framework for probabilistic graphical models, called \emph{Darwin Library}, that is, all the basic data structure such as CPTs, potentials, variables, multiplication, addition, and division are used from Darwin Library.
 Besides of the reliable implementation of Darwin Library, another advantage of using this framework is to provide a platform for fair comparison between BNs and DNs, since both are in the same programming language and the same set of basic implementation.
-One salient feature of Darwin library it is test unity for all its operation classes.
-A test unity is a software testing method which uses individual units of source code that are tested to determine whether they are fit for use \cite{kolawa2007automated}.
-The DN library will also use \emph{matplotlib} \cite{Hunter:2007} in order to provide a environment to draw DNs.
+One salient feature of Darwin library it is unit tests for all its operation classes.
+A unit test is a software testing method which uses individual units of source code that are tested to determine whether they are fit for use \cite{kolawa2007automated}.
+The DN library will also use \emph{matplotlib} \cite{Hunter:2007} in order to provide a environment to depict DNs.
 
-%to finish
 In summary, this project proposes the implementation of a DN library.
 All the basic operations for adaptation and evolution in DNs is available through the library.
 The implementation itself uses Python programming language and the basic data structures are provided by Darwin library.
-A Python interface will be also available for rapid prototyping systems and teaching.
+%A Python interface will be also available for rapid prototyping systems and teaching.
 The main advantage of the DN library is to apply novel ideas and techniques of DNs that were recently propose to simplify working with BNs.
 
